--- a/Logistic-Regression/Binary-classification-from-scratch.ipynb
+++ b/Logistic-Regression/Binary-classification-from-scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "id": "95a978b8",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "id": "f302a8ea",
    "metadata": {},
    "outputs": [
@@ -156,7 +156,7 @@
        "4       1  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "id": "f9a21a0a",
    "metadata": {},
    "outputs": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "id": "0d7efcba",
    "metadata": {},
    "outputs": [],
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "id": "ee8a2625",
    "metadata": {},
    "outputs": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "id": "9378b009",
    "metadata": {},
    "outputs": [],
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "id": "b9e8e6ac",
    "metadata": {},
    "outputs": [
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "id": "e268c747",
    "metadata": {},
    "outputs": [
@@ -902,7 +902,7 @@
        "smoking_status_smokes                        1.000000  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "id": "1aab0479",
    "metadata": {},
    "outputs": [
@@ -1254,7 +1254,7 @@
        "[5110 rows x 17 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1265,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "id": "4ae1208e",
    "metadata": {},
    "outputs": [
@@ -1290,7 +1290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 11,
    "id": "6081e887",
    "metadata": {},
    "outputs": [
@@ -1317,7 +1317,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1328,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 12,
    "id": "77abc44a",
    "metadata": {},
    "outputs": [
@@ -1355,7 +1355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 13,
    "id": "22f28018",
    "metadata": {},
    "outputs": [
@@ -1626,7 +1626,7 @@
        "max                 1.000000  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1637,7 +1637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 14,
    "id": "361d51fe",
    "metadata": {},
    "outputs": [],
@@ -1653,7 +1653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 15,
    "id": "c812a11f",
    "metadata": {},
    "outputs": [],
@@ -1664,7 +1664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 16,
    "id": "0239c505",
    "metadata": {},
    "outputs": [],
@@ -1696,7 +1696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 17,
    "id": "3cdd1b0c",
    "metadata": {},
    "outputs": [],
@@ -1713,7 +1713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 18,
    "id": "458ec213",
    "metadata": {},
    "outputs": [],
@@ -1728,7 +1728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 19,
    "id": "19c87ba1",
    "metadata": {},
    "outputs": [],
@@ -1749,7 +1749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 20,
    "id": "0763c174",
    "metadata": {},
    "outputs": [],
@@ -1769,18 +1769,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 21,
    "id": "ae7bd229",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X=encoded_data.drop(axis=0,columns='stroke')\n",
+    "X=encoded_data.drop(columns='stroke')\n",
     "y=encoded_data['stroke']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 22,
    "id": "b6599b14",
    "metadata": {},
    "outputs": [
@@ -1801,7 +1801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 23,
    "id": "69d07caf",
    "metadata": {},
    "outputs": [
@@ -1823,7 +1823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 24,
    "id": "bf4b6e51",
    "metadata": {},
    "outputs": [
@@ -1855,7 +1855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 25,
    "id": "bfc3d1ed",
    "metadata": {},
    "outputs": [
@@ -1935,16 +1935,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3357/1877369664.py:1: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '[-0.33297082 -0.33297082 -0.33297082 ... -0.33297082  3.0032662\n",
+      "/tmp/ipykernel_9783/1877369664.py:1: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '[-0.33297082 -0.33297082 -0.33297082 ... -0.33297082  3.0032662\n",
       " -0.33297082]' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  X_train.loc[:,num_col]=X_train_std\n",
-      "/tmp/ipykernel_3357/1877369664.py:1: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '[-0.24077171 -0.24077171 -0.24077171 ... -0.24077171 -0.24077171\n",
+      "/tmp/ipykernel_9783/1877369664.py:1: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '[-0.24077171 -0.24077171 -0.24077171 ... -0.24077171 -0.24077171\n",
       " -0.24077171]' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  X_train.loc[:,num_col]=X_train_std\n",
-      "/tmp/ipykernel_3357/1877369664.py:2: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '[-0.33297082 -0.33297082 -0.33297082 ... -0.33297082 -0.33297082\n",
+      "/tmp/ipykernel_9783/1877369664.py:2: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '[-0.33297082 -0.33297082 -0.33297082 ... -0.33297082 -0.33297082\n",
       " -0.33297082]' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  X_test.loc[:,num_col]=X_test_std\n",
-      "/tmp/ipykernel_3357/1877369664.py:2: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '[-0.24077171 -0.24077171 -0.24077171 ... -0.24077171 -0.24077171\n",
+      "/tmp/ipykernel_9783/1877369664.py:2: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '[-0.24077171 -0.24077171 -0.24077171 ... -0.24077171 -0.24077171\n",
       " -0.24077171]' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  X_test.loc[:,num_col]=X_test_std\n"
      ]
@@ -1958,7 +1958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 26,
    "id": "828b2b9a",
    "metadata": {},
    "outputs": [
@@ -1979,7 +1979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 27,
    "id": "fd70bf7e",
    "metadata": {},
    "outputs": [
@@ -1989,7 +1989,7 @@
        "(4088, 16)"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2000,7 +2000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 28,
    "id": "710cb5a9",
    "metadata": {},
    "outputs": [
@@ -2010,7 +2010,7 @@
        "(4088,)"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2021,7 +2021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 29,
    "id": "8950c9c4",
    "metadata": {},
    "outputs": [
@@ -2031,7 +2031,7 @@
        "(16, 1)"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2043,7 +2043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 30,
    "id": "73693135",
    "metadata": {},
    "outputs": [],
@@ -2057,7 +2057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 31,
    "id": "052d848f",
    "metadata": {},
    "outputs": [
@@ -2065,14 +2065,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Cost 0 : 1.3862291021"
+      " Cost 0 : 1.3862291021\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
       " Cost 1000 : 1.3284322234\n",
       " Cost 2000 : 1.2828305415\n",
       " Cost 3000 : 1.2462134327\n",
@@ -2095,7 +2094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 32,
    "id": "1c11447d",
    "metadata": {},
    "outputs": [
@@ -2129,7 +2128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 33,
    "id": "4808f13d",
    "metadata": {},
    "outputs": [
@@ -2142,7 +2141,7 @@
        "        1.97291257e-03,  4.09507611e-02, -9.83122755e-03,  4.17410822e-04])"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2153,7 +2152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 34,
    "id": "f1defaa4",
    "metadata": {},
    "outputs": [],
@@ -2165,7 +2164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 35,
    "id": "c2fb8dfb",
    "metadata": {},
    "outputs": [
@@ -2186,7 +2185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 36,
    "id": "350c5c49",
    "metadata": {},
    "outputs": [
@@ -2208,7 +2207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 37,
    "id": "fbc07b97",
    "metadata": {},
    "outputs": [],
@@ -2221,16 +2220,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 38,
    "id": "927feaac",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.14127423822714683\n"
-     ]
+     "data": {
+      "text/plain": [
+       "np.float64(0.14127423822714683)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2239,16 +2241,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 39,
    "id": "0304a42a",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.12598425196850394\n"
-     ]
+     "data": {
+      "text/plain": [
+       "np.float64(0.12598425196850394)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2257,7 +2262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 40,
    "id": "4fc19541",
    "metadata": {},
    "outputs": [],
@@ -2275,7 +2280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 41,
    "id": "5737cf6c",
    "metadata": {},
    "outputs": [
@@ -2285,7 +2290,7 @@
        "np.float64(0.7427184466019418)"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2296,7 +2301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 42,
    "id": "34114d50",
    "metadata": {},
    "outputs": [
@@ -2315,7 +2320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 43,
    "id": "e9c16dcc",
    "metadata": {},
    "outputs": [
@@ -2325,7 +2330,7 @@
        "np.float64(0.7441860465116279)"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2336,7 +2341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 44,
    "id": "72deb1d0",
    "metadata": {},
    "outputs": [
