--- a/Logistic-Regression/Binary-classification.ipynb
+++ b/Logistic-Regression/Binary-classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "id": "58198596",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "id": "4b3d26cb",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,7 @@
        "4       1  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "74cc4d8a",
    "metadata": {},
    "outputs": [
@@ -197,7 +197,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "b9cd377a",
    "metadata": {},
    "outputs": [],
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "eb2f8b09",
    "metadata": {},
    "outputs": [],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "id": "98862884",
    "metadata": {},
    "outputs": [
@@ -416,7 +416,7 @@
        "4                         True                  False  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "ecff612d",
    "metadata": {},
    "outputs": [
@@ -614,7 +614,7 @@
        "4                            1                      0  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "id": "addd2684",
    "metadata": {},
    "outputs": [
@@ -656,7 +656,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,18 +667,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "id": "4fbd3c24",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X=data.drop(columns='stroke',axis=0)\n",
+    "X=data.drop(columns='stroke')\n",
     "y=data['stroke']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "id": "623af2b6",
    "metadata": {},
    "outputs": [],
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "id": "64b06ee6",
    "metadata": {},
    "outputs": [],
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "id": "4ca4a57f",
    "metadata": {},
    "outputs": [
@@ -711,7 +711,7 @@
        "['age', 'hypertension', 'heart_disease', 'avg_glucose_level', 'bmi', 'stroke']"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "id": "7ce5ea9b",
    "metadata": {},
    "outputs": [],
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "id": "58bc5025",
    "metadata": {},
    "outputs": [
@@ -760,7 +760,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "id": "63b50aa6",
    "metadata": {},
    "outputs": [
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "id": "47d1a3dd",
    "metadata": {},
    "outputs": [
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "id": "fb1c7d9d",
    "metadata": {},
    "outputs": [
@@ -835,7 +835,7 @@
        "0.13624894869638352"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "id": "a5a849a9",
    "metadata": {},
    "outputs": [
@@ -856,7 +856,7 @@
        "0.13793103448275862"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "id": "f5aa8129",
    "metadata": {},
    "outputs": [
@@ -877,7 +877,7 @@
        "0.2334293948126801"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "id": "9a3ce867",
    "metadata": {},
    "outputs": [
@@ -898,7 +898,7 @@
        "0.23529411764705882"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
