--- a/Decision-Tree/Decision-tree-scratch.ipynb
+++ b/Decision-Tree/Decision-tree-scratch.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2619dc0b",
    "metadata": {},
    "outputs": [],
@@ -72,8 +72,7 @@
     "    w_right=len(right_)/len(X)\n",
     "    p_1_left=entropy(sum(y[left_])/len(left_))\n",
     "    p_1_right=entropy(sum(y[right_])/len(right_))\n",
-    "    return (w_left*p_1_left)+(w_right*p_1_right)\n",
-    "\n"
+    "    return (w_left*p_1_left)+(w_right*p_1_right)\n"
    ]
   },
   {
