Update execution counts in k-mean notebook for consistency

--- a/kmean/k-mean.ipynb
+++ b/kmean/k-mean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "38abd47b",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "99ddd22d",
    "metadata": {},
    "outputs": [
@@ -221,7 +221,7 @@
        "4          Buffet    Banashankari  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "43e8a618",
    "metadata": {},
    "outputs": [
@@ -247,7 +247,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "2ddfa387",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "7914f531",
    "metadata": {},
    "outputs": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "33eb291b",
    "metadata": {},
    "outputs": [],
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "d9a0cca7",
    "metadata": {},
    "outputs": [
@@ -658,7 +658,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
+   "id": "0aad9e14",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Banashankari', 'Basavanagudi', 'Mysore Road', 'Jayanagar',\n",
+       "       'Kumaraswamy Layout', 'Rajarajeshwari Nagar', 'Vijay Nagar',\n",
+       "       'Uttarahalli', 'JP Nagar', 'South Bangalore', 'City Market',\n",
+       "       'Nagarbhavi', 'Bannerghatta Road', 'BTM', 'Kanakapura Road',\n",
+       "       'Bommanahalli', nan, 'CV Raman Nagar', 'Electronic City', 'HSR',\n",
+       "       'Marathahalli', 'Sarjapur Road', 'Wilson Garden', 'Shanti Nagar',\n",
+       "       'Koramangala 5th Block', 'Koramangala 8th Block', 'Richmond Road',\n",
+       "       'Koramangala 7th Block', 'Jalahalli', 'Koramangala 4th Block',\n",
+       "       'Bellandur', 'Whitefield', 'East Bangalore', 'Old Airport Road',\n",
+       "       'Indiranagar', 'Koramangala 1st Block', 'Frazer Town', 'RT Nagar',\n",
+       "       'MG Road', 'Brigade Road', 'Lavelle Road', 'Church Street',\n",
+       "       'Ulsoor', 'Residency Road', 'Shivajinagar', 'Infantry Road',\n",
+       "       'St. Marks Road', 'Cunningham Road', 'Race Course Road',\n",
+       "       'Commercial Street', 'Vasanth Nagar', 'HBR Layout', 'Domlur',\n",
+       "       'Ejipura', 'Jeevan Bhima Nagar', 'Old Madras Road', 'Malleshwaram',\n",
+       "       'Seshadripuram', 'Kammanahalli', 'Koramangala 6th Block',\n",
+       "       'Majestic', 'Langford Town', 'Central Bangalore', 'Sanjay Nagar',\n",
+       "       'Brookefield', 'ITPL Main Road, Whitefield',\n",
+       "       'Varthur Main Road, Whitefield', 'KR Puram',\n",
+       "       'Koramangala 2nd Block', 'Koramangala 3rd Block', 'Koramangala',\n",
+       "       'Hosur Road', 'Rajajinagar', 'Banaswadi', 'North Bangalore',\n",
+       "       'Nagawara', 'Hennur', 'Kalyan Nagar', 'New BEL Road', 'Jakkur',\n",
+       "       'Rammurthy Nagar', 'Thippasandra', 'Kaggadasapura', 'Hebbal',\n",
+       "       'Kengeri', 'Sankey Road', 'Sadashiv Nagar', 'Basaveshwara Nagar',\n",
+       "       'Yeshwantpur', 'West Bangalore', 'Magadi Road', 'Yelahanka',\n",
+       "       'Sahakara Nagar', 'Peenya'], dtype=object)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['location'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7541c2d2",
    "metadata": {},
    "outputs": [
@@ -823,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "8b7a4832",
    "metadata": {},
    "outputs": [
@@ -856,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "44689e90",
    "metadata": {},
    "outputs": [
@@ -889,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "c5b3a853",
    "metadata": {},
    "outputs": [],
@@ -901,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "447d56a0",
    "metadata": {},
    "outputs": [
@@ -934,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "a112335f",
    "metadata": {},
    "outputs": [],
@@ -949,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "9b355911",
    "metadata": {},
    "outputs": [
@@ -1176,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "a23c7d2f",
    "metadata": {},
    "outputs": [],
@@ -1186,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "839fb55c",
    "metadata": {},
    "outputs": [
@@ -1212,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "32c1e66c",
    "metadata": {},
    "outputs": [
@@ -1244,7 +1290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "6288f174",
    "metadata": {},
    "outputs": [
@@ -1888,7 +1934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "4696ec4c",
    "metadata": {},
    "outputs": [
